# game-boy-emu

./: .gitlab-ci.yml  README.md
semester_project/: .gitignore  CMakeLists.txt  README.MD  vcpkg.json
semester_project/bootrom/: bootrom_license.txt
semester_project/doc/: Makefile  documentation.tex
semester_project/src/: emulator.cpp  emulator.hpp  emulator_io_memory_map.cpp  main.cpp  memory.cpp  memory.hpp  utility.hpp
semester_project/src/cpu/: central_processing_unit.cpp  central_processing_unit.hpp  cpu_execute_methods.cpp  cpu_execute_table.cpp  cpu_interrupt_typedef.hpp  registers.cpp  registers.hpp
semester_project/src/hardware/: apu.cpp  apu.hpp  cartridge.cpp  cartridge.hpp  cartridge_memory_controllers.cpp  cartridge_memory_controllers.hpp  joypad.cpp  joypad.hpp  pixel_processing_unit.cpp  pixel_processing_unit.hpp  ppu.cpp  ppu.hpp  ppu_data.hpp  ram.hpp  timer.cpp  timer.hpp
